drag-overlay: Fix the styles
We need to color the page that appears while dragging, not the while window
including the content. What would be nice to do for the drag overlay itself
is to remove its default dnd box-shadow, as that one is clipped by window
corners.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -38,7 +38,11 @@ queuerow label.song-title {
   font-size: 100%;
 }
 
-dragoverlay:drop(active) {
+dragoverlay {
+  box-shadow: none;
+}
+
+.drag-overlay-status-page {
   background-color: alpha(@accent_bg_color, 0.5);
   color: @accent_fg_color;
 }
